--- a/FlyOceanFish.github.io/source/_posts/设计模式之感悟和实践1.md
+++ b/FlyOceanFish.github.io/source/_posts/设计模式之感悟和实践1.md
@@ -1,5 +1,5 @@
 ---
-title: 设计模式之感悟和实践1 # 这是标题
+title: 设计模式之感悟和实践(一) # 这是标题
 date: 2018-12-14 10:19:00
 categories:  # 这里写的分类会自动汇集到 categories 页面上，分类可以多级
 - 设计模式 # 一级分类
@@ -184,8 +184,3 @@ MyHandle *myHandle = [[MyHandle alloc] initWithType:CLICK2];
 这种使用方法完全可以避免if...else的使用，并且业务逻辑很清晰。
 # 总结
 其实项目使用过程中，关键一点还是要去发现那块代码会一直变，将经常变换的代码进行设计模式的封装，则以后的代码扩展是非常的方便
-
-
-
-
-
