--- a/FlyOceanFish.github.io/source/_posts/设计模式实践(二).md
+++ b/FlyOceanFish.github.io/source/_posts/设计模式实践(二).md
@@ -1,5 +1,5 @@
 ---
-title: 设计模式之感悟和实践1 # 这是标题
+title: 设计模式之感悟和实践(二) # 这是标题
 date: 2019-01-08 10:30:00
 categories:  # 这里写的分类会自动汇集到 categories 页面上，分类可以多级
 - 设计模式 # 一级分类
